# team27app

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  menu.py  pyproject.toml  requirements.txt  streamlit_app.py
pages/: 01_Account.py  02_Games_History.py  03_Add_Game.py  04_Edit_Game.py  05_Remove_Game.py  06_Payments_Summary.py  07_Send_Late_Notification.py  games_25_26.py  login.py  logout.py  manage_expenses.py  manage_games.py  manage_notifications.py  manage_payments.py  manage_players.py  manage_transactions.py  manage_users.py  no_permission_redirect.py  notifications.py  paymaster_view.py  users.py
utils/: auth.py  config.py  db.py  pages.py  player_info.py
utils/db/: client.py  expenses.py  games.py  payments.py  players.py  transactions.py  users.py
utils/fb/: api.py  notifications.py
