[project]
name = "team27app"
version = "0.1.0"
description = "Team 27 App in Streamlit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.7",
    "pydantic-mongo>=3.1.0",
    "pymongo>=4.16.0",
    "requests>=2.32.5",
    "st-social-media-links>=0.1.5",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.16",
]

[tool.ruff]
line-length = 100

[[tool.mypy.overrides]]
module = [
    "st_social_media_links.*"
]
follow_untyped_imports = true

[tool.uv]
link-mode = "copy"
